syntax = "proto3";
package pb;

option go_package = "./";

enum SortDirection {
    ASC = 0;
    DESC = 1;
}

enum ProductSortField {
    NAME = 0;
    PRICE = 1;
}

message ProductSortInput {
    ProductSortField field = 1;
    SortDirection direction = 2;
}

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    string category = 5;
    string image_url = 6;
    repeated string tags = 7;
    bool availability = 8;
    int64 stock = 9;
}

message PostProductRequest {
    string name = 1;
    string description = 2;
    double price = 3;
    string category = 4;
    string image_url = 5;
    repeated string tags = 6;
    int64 stock = 7;
}

message PostProductResponse {
    Product product = 1;
}

message GetProductRequest {
    string id = 1;
}

message GetProductResponse {
    Product product = 1;
}

message GetProductsRequest {
    uint64 skip = 1;
    uint64 take = 2;
    repeated string ids = 3;
    string query = 4;
    string category = 5;
    ProductSortInput sort = 6;
}

message GetProductsResponse {
    repeated Product products = 1;
}

message DeductStockRequest {
    string id = 1;
    int64 quantity = 2;
}

message DeductStockResponse {
    Product product = 1;
}

service CatalogService {
    rpc PostProduct (PostProductRequest) returns (PostProductResponse) {}
    rpc GetProduct (GetProductRequest) returns (GetProductResponse) {}
    rpc GetProducts (GetProductsRequest) returns (GetProductsResponse) {}
    rpc DeductStock (DeductStockRequest) returns (DeductStockResponse) {}
}